# A2HHook

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README.md  THIRD_PARTY_NOTICES.md  action.sh  build.sh  customize.sh  module.prop  package_module.py  post-fs-data.sh  service.sh  share_logs.sh  wrapper.sh
.github/workflows/: build.yml
config/: packages.txt
src/: CMakeLists.txt  a2h_hook.cpp  dobby.h  injector.c  patcher_v3.c  trigger.c  zygisk.hpp
webroot/: index.html
